# Options-Deep-Data-Retrieval

./: .claude  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPER.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  alembic.ini  development-resources.md  example_nasdaq_companies.py  example_usage.py  main.py  polygon.tickers  pyproject.toml  python_implementor.md  repo-base-design.md  requirements.txt
agents/: readme.md
agents/programmer/: agent.md  agent_new.md
ai_docs/business_logic/companies/: company_ingestion_pipeline.md
ai_docs/planning/: requirements-dev.txt
ai_docs/python/: commands.md  programs.md  typing-python.md
ai_docs/python/linting/: README.md  linting_tools_comparison.md  practical_implementation_guide.md  python_linting_design_doc.md  uv_deep_dive.md
ai_docs/python/mocks/: design_doc_mocks.md  factory_boy_guide.md  faker_guide.md  pgmock_guide.md  pytest_mock_guide.md  pytest_postgresql_guide.md  typing_enforcement_guide.md  unittest_mock_factory_boy_integration.md  unittest_mock_faker_factory_boy_integration.md  unittest_mock_faker_integration.md  unittest_mock_guide.md
ai_docs/software_design/: new_company_pipeline.md  simple_pipeline.md
ai_docs/stock_information/symbols/: information_on_stock_ticker_types.polygon
dockerfiles/test/: Dockerfile  Dockerfile.data  docker-entrypoint-fixtures.sh  docker-entrypoint-init.sh
dockerfiles/test/data_fill/: seed_test_fixtures.py
examples/: company_pipeline_usage.py
notebooks/: first_go.ipynb
planning/: requirements.txt
scripts/: build_test_data_image.sh  build_test_image.sh  lint-check.sh  lint.sh
src/: CLAUDE.md  architecture_README.md
src/algorithms/: __init__.py  constants.py
src/algorithms/high_lows/: README.md  __init__.py  constants.py  derived_data.py  pattern_calculator.py  pattern_config.py  processor.py  processor_wrapper.py  test_derived_data.py  test_full_processor.py  test_pattern_calculator.py  test_processor.py
src/algorithms/low_highs/: README.md  __init__.py  constants.py  derived_data.py  pattern_calculator.py  pattern_config.py  processor.py  processor_wrapper.py  test_derived_data.py  test_full_processor.py  test_pattern_calculator.py  test_processor.py
src/cmd/: CLAUDE.md  ingest_all_EOD_for_historical_tickers.py
src/cmd/algorithms/: __init__.py  backfill_high_low.py  backfill_low_high.py  daily_high_low_calculation.py  daily_low_high_calculation.py
src/cmd/examples/: __init__.py  company_pipeline_usage.py
src/cmd/nasdaq_screener_sync/: main.py
src/config/: CLAUDE.md  ENVIRONMENT.md  configuration.py  database.py  environment.py
src/config/environment_configs/: local.json  prod.json
src/config/models/: algorithm.py  database.py  environment_variables.py  equities.py
src/data_sources/: __init__.py
src/data_sources/base/: __init__.py  base.py  bulk_eod_data_source.py  company_base.py  company_data_source.py  historical_data_source.py  splits_data_source.py
src/data_sources/eodhd/: CLAUDE.md  README.md  __init__.py  api_review.md  csv_eod_data.py  csv_symbols.py  daily_bulk_eod_data.py  eod_data.py  eodhd.md  splits.py  symbols.py  test_daily_bulk_eod_data.py
src/data_sources/models/: company.py  stock_quote.py  test_providers.py  ticker.py  ticker_history.py
src/data_sources/nasdaq/: README.md  company.py  company_mock.py  database_integration.py  nasdaq_company_provider.py  screener.py  screener_mock.py
src/data_sources/providers/: yahoo_finance.py
src/data_sources/stock_quotes/: base.py
src/data_sources/yahoo_finance/: example.json  yahoo_finance.py  yahoo_finance_mock.py
src/database/: CLAUDE.md  alembic-tutorial.md  base.py  config.py  database-setup.md
src/database/algorithms/: alembic.ini  base.py
src/database/equities/: alembic.ini  base.py  enums.py  users.md
src/database/models/: __init__.py  database_config.py
src/models/: README.md  company.py  company_with_ticker.py  date_price.py  eod_split_adjusted_pricing.py  historical_eod_pricing.py  misplaced_eod_pricing.py  missing_eod_pricing.py  rebound.py  split.py  split_adjusted_pricing.py  stock_quote.py  test_providers.py  ticker.py  ticker_history.py  ticker_history_stats.py  ticker_history_with_company.py
src/pipelines/: CLAUDE.md  __init__.py  eod_pricing_pipeline.py
src/pipelines/algorithms/: __init__.py  backfill_high_low_pipeline.py  backfill_low_high_pipeline.py  daily_high_low_pipeline.py  daily_low_high_pipeline.py
src/pipelines/companies/: __init__.py  new_company_pipeline.py  simple_pipeline.py  test_new_company_pipeline.py  test_simple_pipeline.py
src/pipelines/eod/: __init__.py  active_new_listing_pipeline.py  current_day_eod_pricings.py  delisted_pipeline.py
src/pipelines/splits/: all_stocks_splits_ingestion_pipeline.py  current_day_splits_ingestion_pipeline.py
src/repos/: CLAUDE.md  __init__.py  base_repository.py
src/repos/algorithms/: __init__.py  highs_repository.py  lows_repository.py  rebounds_repository.py  reversals_repository.py
src/repos/equities/: CLAUDE.md  __init__.py
src/repos/system/: __init__.py  system_config.py  system_repository.py
src/repos/unittests/: test_base_repository.py
src/services/: __init__.py
src/services/companies/: company_service.py
src/services/pricing/: __init__.py  split_adjusted_pricing_service.py
src/services/tickers/: __init__.py  ticker_history_service.py
src/utils/: date_utils.py  trading_calendar.py
tests/: CLAUDE.md  README.md  conftest.py  pytest.ini  run_integration_tests.sh  testing.md
tests/data_source_mocks/eodhd/: mock_bulk_eod_data.py  mock_eod_data.py  mock_splits.py  mock_symbols.py
tests/data_source_mocks/nasdaq/: mock_screener.py
tests/integration/: CLAUDE.md  README.md  common_setup.py  simple_setup_test.py
tests/integration/algorithms/: __init__.py
tests/integration/data/: setup_helpers.py
tests/integration/db/: db_assertions.py
tests/integration/eod/: __init__.py
tests/integration/splits/: __init__.py
tests/integration/test_verification/: PARALLEL_TESTING.md  test_parallel_container_a.py  test_simple_setup.py  (+1 more)
tests/utils/: db_assertions.py
(+158 files in other folders)
